<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.election.androboys.election.signup">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_nid"
            android:id="@+id/textView13" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:hint="ex:19858198510123456"
            android:gravity="center"
            android:id="@+id/txt_nid" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_birth"
            android:id="@+id/textView14" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/birth_hint"
            android:gravity="center"
            android:id="@+id/txt_birth"
            android:onClick="bd_value"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/manucipility"
            android:id="@+id/manucipility" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/birth_hint"
            android:gravity="center"
            android:id="@+id/dis"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dis"
            android:id="@+id/textView16" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/birth_hint"
            android:gravity="center"
            android:id="@+id/municipility"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_signup"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/search_btn_style"
            android:id="@+id/btn_signup"
            />



    </LinearLayout>
</RelativeLayout>
