<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#21304A"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Election">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="50dp"
            android:text="@string/app_title"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:id="@+id/app_main_title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/app_main_title"
            android:gravity="center"

            android:id="@+id/menu_candidate"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/candidate"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:background="@drawable/candidate_btn_style1"
                android:id="@+id/btn_candidate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/vote"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/candidate_btn_style1"
                android:id="@+id/btn_vote" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/polling_title"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/candidate_btn_style2"
            android:layout_below="@+id/menu_candidate"
            android:id="@+id/menu_polling" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_below="@+id/menu_polling"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_signup"
                android:textColor="#fefffd"
                android:id="@+id/txtLogin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/vote_rules"
                android:textColor="#fdffff"
                android:id="@+id/btn_rules" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="ফলাফল"
                android:textColor="#fdffff"
                android:id="@+id/btn_result" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
